test/errors/reassigning_inmutable_variable.dmd
my_var be 5


my_var be 10

--- Output
Trying to reassign immutable variable

4| my_var be 10
   ^^^^^^
Previously defined here:

1| my_var be 5
---
